--- a/pom.xml
+++ b/pom.xml
@@ -10,10 +10,10 @@
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
   <groupId>hku</groupId>
-  <artifactId>pic-share</artifactId>
+  <artifactId>Drone_flight</artifactId>
   <version>0.1-SNAPSHOT</version>
-  <name>pic-share</name>
-  <description>server for pic-share</description>
+  <name>Drone_flight</name>
+  <description>server for Drone_flight</description>
   <properties>
     <java.version>1.8</java.version>
   </properties>
