--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 #hqj local sql
 spring.datasource.driver-class-name = org.mariadb.jdbc.Driver
-spring.datasource.url = jdbc:mariadb://localhost:3306/drone_flight?useUnicode=true&characterEncoding=utf8&useSSL=false
+spring.datasource.url = jdbc:mariadb://localhost:3306/pic-share?useUnicode=true&characterEncoding=utf8&useSSL=false
 spring.datasource.username = root
 spring.datasource.password = 123456
 
