1.videoUpload&resultUpload 2.优化streamUrl&resultUrl

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,9 @@ spring.datasource.url = jdbc:mariadb://localhost:3306/droneflight?useUnicode=tru
 spring.datasource.username = root
 spring.datasource.password = 123456
 
+result.url = localhost:8080/result/
 
-file.images.path=F:
+file.video.path = ./video/
+file.result.path = ./result/
 
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
