--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.url = jdbc:mariadb://localhost:3306/droneflight?useUnicode=tru
 spring.datasource.username = root
 spring.datasource.password = 123456
 
-result.url = localhost:8080/result/
+result.url = rtmp://18.166.154.193/live/
 
 file.video.path = ./video/
 file.result.path = ./result/
