--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.datasource.driver-class-name = org.mariadb.jdbc.Driver
 spring.datasource.url = jdbc:mariadb://localhost:3306/droneflight?useUnicode=true&characterEncoding=utf8&useSSL=false
 spring.datasource.username = root
 spring.datasource.password = 123456
+spring.servlet.multipart.max-file-size=500MB
 
 result.url = rtmp://18.166.154.193/live/
 
