[feat] fix exception problem

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,9 @@ spring.datasource.url = jdbc:mariadb://localhost:3306/droneflight?useUnicode=tru
 spring.datasource.username = root
 spring.datasource.password = 123456
 spring.servlet.multipart.max-file-size=500MB
+spring.servlet.multipart.max-request-size=500MB
+spring.http.multipart.maxFileSize=500MB
+spring.http.multipart.maxRequestSize=500MB
 
 result.url = rtmp://18.166.154.193/live/
 
