--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,5 +13,6 @@ result.url = rtmp://18.166.154.193/live/
 
 file.video.path = ./video/
 file.result.path = ./result/
+file.image.path = ./image/
 
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
