[fix] request param

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,15 +4,16 @@ spring.datasource.driver-class-name = org.mariadb.jdbc.Driver
 spring.datasource.url = jdbc:mariadb://localhost:3306/droneflight?useUnicode=true&characterEncoding=utf8&useSSL=false
 spring.datasource.username = root
 spring.datasource.password = 123456
-spring.servlet.multipart.max-file-size=500MB
-spring.servlet.multipart.max-request-size=500MB
-spring.http.multipart.maxFileSize=500MB
-spring.http.multipart.maxRequestSize=500MB
+spring.servlet.multipart.max-file-size=5000MB
+spring.servlet.multipart.max-request-size=5000MB
+spring.http.multipart.maxFileSize=5000MB
+spring.http.multipart.maxRequestSize=5000MB
 
-result.url = rtmp://18.166.154.193/live/
+server.port=8090
+result.url = rtmp://localhost/live/
 
-file.video.path = ./video/
-file.result.path = ./result/
-file.image.path = ./image/
+file.video.path = /home/ec2-user/drone_flight_server/video/
+file.result.path = /home/ec2-user/drone_flight_server/result/
+file.image.path = /home/ec2-user/drone_flight_server/image/
 
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
