--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,17 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-thymeleaf</artifactId>
     </dependency>
+    <dependency>
+      <groupId>ws.schild</groupId>
+      <artifactId>jave-core</artifactId>
+      <version>2.4.6</version>
+    </dependency>
+    <dependency>
+      <groupId>ws.schild</groupId>
+      <artifactId>jave-native-win64</artifactId>
+      <version>2.4.6</version>
+    </dependency>
+
   </dependencies>
 
   <build>
